Fix CSS layout problems on energy widgets (not responsive yet)

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -6,13 +6,11 @@
 
 .widget-container {
   border-left-width: 8px;
-  border-left-color: #647780;
+  border-left-color: #9796a5;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   min-width: 200px;
-  max-height: 105px;
-  height: 105px;
-  padding-bottom: 10px;
+  height: 110px;
 }
 
 .widget-container:hover {
@@ -21,22 +19,26 @@
 
 .widget-body {
   padding-top: 8px;
-  padding-bottom: 8px;
+  padding-bottom: 12px;
 }
 
 .widget-image {
-  max-width: 100%;
-  max-height: 100%;
-  width: 70px;
-  height: 70px;
+  width: 100%;
+  min-width: 60px;
   padding: 4px;
+  max-width: 70px;
+  max-height: 80px;
 }
 
 .widget-container-image {
   display: flex;
   flex-flow: column;
   justify-content: center;
-  max-height: 100%;
+  align-items: center;
+}
+
+.widget-container-text {
+  height: 100%;
 }
 
 .dash-subtitle {
@@ -72,4 +74,51 @@ h4 {
   padding-left: 4px;
   float: left;
   border-left: 2px solid #acb5b9;
+}
+
+.col-widget {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.container-left {
+  display: flex;
+  justify-content: flex-end;
+}
+
+th.sub-1-table {
+  padding-left: 30px;
+  font-size: 0.9em;
+}
+
+th.sub-2-table {
+  padding-left: 60px;
+  font-weight: 500;
+  font-size: 0.9em;
+}
+
+tbody tr:hover {
+  background-color: #ffff99;
+}
+
+tr.main-table {
+  background-color: #e6e6e6;
+}
+
+.header-table {
+  background-color: #d3d3d4;
+}
+
+td.main-table {
+  font-weight: 700;
+}
+
+td.sub-1-table {
+  font-weight: 600;
+  padding-left: 10px;
+}
+
+td.sub-2-table {
+  padding-left: 20px;
 }
